<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_total"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scroll_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        tools:context=".ui.food_detail.FoodDetailFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:fitsSystemWindows="true">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/iv_container"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="20dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="2dp"
                app:layout_constraintBottom_toTopOf="@+id/guideline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeWidth="0dp">

                <ImageView
                    android:id="@+id/iv_food_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_lomo_saltado_sample"
                    app:layout_constraintBottom_toTopOf="@+id/guideline"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </com.google.android.material.card.MaterialCardView>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="300dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:orientation="vertical"
                android:paddingHorizontal="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_container">

                <TextView
                    android:id="@+id/tv_food_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iv_food_image"
                    tools:text="Lomo saltado" />

                <TextView
                    android:id="@+id/tv_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/food_description_sample"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/pasos"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_steps_string"
                    android:layout_marginStart="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:textSize="16sp"
                    tools:text="1. Corta el limon"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/ingredients"
                    android:textSize="16sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_ingredients"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="6dp"
                    android:clipToPadding="false"
                    android:orientation="vertical"
                    android:overScrollMode="never"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:spanCount="2"
                    tools:itemCount="6"
                    tools:listitem="@layout/item_ingredient" />

                <!--<FrameLayout xmlns:map="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/map"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    map:cameraZoom="16"
                    map:liteMode="true"
                    map:mapType="normal"
                    map:uiCompass="true"
                    map:uiZoomControls="true"
                    map:useViewLifecycle="true"/>-->

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/map_container"
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:backgroundTint="@color/white"
                    android:clipToPadding="false"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="8dp"
                    app:strokeWidth="0dp">

                    <com.google.android.gms.maps.MapView xmlns:map="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/map_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        map:uiRotateGestures="false"
                        map:uiScrollGestures="false"
                        map:uiTiltGestures="false"
                        map:uiZoomControls="false"
                        map:uiZoomGestures="false" />

                    <TextView
                        android:id="@+id/tv_navigator"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:background="@color/white"
                        android:gravity="center"
                        android:paddingVertical="10dp"
                        android:text="Click para ver el mapa completo"
                        android:textSize="18sp" />

                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
